# genshin

./: README.md  pyproject.toml
conf/: inference_config.yaml
genshin/: api.py  image.py
genshin_cli/: frontend.py  server.py
